--- a/Nb_occurences/nbOcc.html
+++ b/Nb_occurences/nbOcc.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Exo10</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
- 		<link rel="stylesheet" type="text/css" href="ex10.css" />  
+ 		<link rel="stylesheet" type="text/css" href="style.css" />  
     </head>
     <body>
 		<table id="tab">
