--- a/Menu_Restaurant/Menu.html
+++ b/Menu_Restaurant/Menu.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Exo11</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<script text="text/javascript" src="ex11.js"></script>
+		<script text="text/javascript" src="Script.js"></script>
 	</head>
     <body>
 		<h1>Composez votre menu</h1>
